<resources>
    <string name="app_name">ToDoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save">save</string>
    <string name="back">back</string>
    <string name="add_new_task">Add new task</string>
    <string name="enter_new_task">Enter new task</string>
    <string name="do_you_want_to_turn_on_a_reminder">Do you want to turn on a reminder?</string>
    <string name="_00_00">00:00</string>
</resources>